# eyeroll

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml
commands/: fix.md  history.md  init.md  watch.md
docs-site/: mkdocs.yml
docs-site/docs/: cli.md  development.md  how-it-works.md  index.md
docs-site/docs/backends/: cerebras.md  gemini.md  grok.md  groq.md  ollama.md  openai-compat.md  openai.md  openrouter.md  overview.md
docs-site/docs/commands/: fix.md  history.md  init.md  watch.md
docs-site/docs/getting-started/: install.md  quickstart.md  setup.md
eyeroll/: __init__.py  acquire.py  analyze.py  backend.py  cli.py  context.py  cost.py  extract.py  history.py  mcp_server.py  watch.py
eyeroll/server/: db.py  main.py
eyeroll/server/static/: index.html
plugins/eyeroll/: plugin.toml
plugins/eyeroll/.claude-plugin/: plugin.json
plugins/eyeroll/commands/: api-rotate-key.md  api-usage.md  api-watch.md  fix.md  init.md  keys-create.md  keys-delete.md  keys-list.md  keys-rename.md  signup.md  watch.md
plugins/eyeroll/skills/video-to-skill/: SKILL.md
reelfix/: __init__.py  acquire.py  analyze.py  cli.py  extract.py  watch.py
skills/history/: SKILL.md
skills/init/: SKILL.md
skills/video-to-pr/: SKILL.md
skills/video-to-skill/: SKILL.md
skills/watch-video/: SKILL.md
tests/: conftest.py  test_acquire.py  test_acquire_e2e.py  test_analyze.py  test_backend.py  test_cli.py  test_context.py  test_extract.py  test_extract_e2e.py  test_history.py  test_integration.py  test_new_features.py  test_openai_compat_backend.py  test_pipeline_e2e.py  test_real_recordings.py  test_watch.py
tests/fixtures/: generate.sh
watch-video/: SKILL.md
